--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,46 @@
+.title-content {
+    min-height: 200px;
+    box-shadow: 0px -12px 25px 15px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    padding-top: 50px;
+
+    position: relative;
+}
+
 .top-nav-menu {
-    background-color: red;
+    background-color: #b73231;
+    border-bottom: 2px solid #820101;
+    color: #ffffff;
+    min-height: 50px;
+    margin-bottom: -9px;
+    position: relative;
+    z-index: 9;
+}
+
+.top-nav-menu h1 {
+    font-size: 1.5em;
+    line-height: 50px;
+}
+
+.map-wrapper {
+    background-image: radial-gradient(#e85353, #820101);
+    padding: 25px;
 }
 
 .map {
     width: 100%;
     height: 600px;
     box-sizing: content-box;
+}
+
+.section-content {
+    min-height: 500px;
+    box-shadow: 0px 12px 25px 15px rgba(0, 0, 0, 0.5);
+    padding: 50px 0;
+}
+
+footer {
+    background-image: linear-gradient(180deg,#b50606, #820101);
+    padding: 25px;
+    min-height: 300px;
 }
