--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "Legio Mariae";
+    src: url("/css/fonts/LegioMariae_v1.ttf");
+}
+
+h1, h2, h3 {
+    color: #820101;
+}
+
 .title-content {
     min-height: 200px;
     box-shadow: 0px -12px 25px 15px rgba(0, 0, 0, 0.5);
@@ -8,7 +17,7 @@
 }
 
 .top-nav-menu {
-    background-color: #b73231;
+    background-image: linear-gradient(180deg,#820101, #b73231);
     border-bottom: 2px solid #820101;
     color: #ffffff;
     min-height: 50px;
@@ -18,9 +27,11 @@
 }
 
 .top-nav-menu h1 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     line-height: 50px;
-    margin-bottom: 0px;
+    margin-bottom: 5px;
+    font-family: 'Legio Mariae';
+    color: #ffffff;
 }
 
 .map-wrapper {
@@ -41,6 +52,7 @@
 }
 
 footer {
+    border-top: #820101 2px solid;
     background-image: linear-gradient(180deg,#b50606, #820101);
     padding: 25px;
     min-height: 300px;
