--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ h1, h2, h3 {
     font-size: 1.3em;
     line-height: 50px;
     margin-bottom: 5px;
-    font-family: 'Legio Mariae';
+    font-family: 'Legio Mariae (OEF)';
     color: #ffffff;
 }
 
