--- a/css/main.css
+++ b/css/main.css
@@ -75,4 +75,26 @@ footer {
     background-image: linear-gradient(180deg,#b50606, #820101);
     padding: 25px;
     min-height: 300px;
+    position: relative;
+}
+
+.main-text-footer {
+    color: #ffffff;
+}
+
+.date-text-footer {
+    color: #ffffff;
+    position: relative;
+    margin: 25px 0 0;
+}
+
+.date-text-footer p {
+    margin-bottom: 0px;
+}
+
+.footer-central--logo {
+    text-align: center;
+    height: 100px;
+    position: relative;
+    top: 3px
 }
